--- a/client/src/app/pages/detail/detail.component.scss
+++ b/client/src/app/pages/detail/detail.component.scss
@@ -11,7 +11,7 @@
     height: 100%;
     width: 75%;
     background-color: black;
-    overflow: hidden;
+    // overflow: hidden;
 
     .close-icon {
       color: white;
@@ -28,7 +28,7 @@
 
     .carousel-inner {
       position: relative;
-      overflow: hidden;
+      // overflow: hidden;
       width: 100%;
       height: 90%;
       max-height: 90%;
@@ -193,7 +193,7 @@
 
     .all-top-comments-detail {
       height: 100%;
-      overflow: auto;
+      // overflow: auto;
       .center-right-detail-post {
         display: flex;
         flex-direction: column;
@@ -390,8 +390,8 @@
               display: flex;
               flex-direction: column;
               textarea {
-                overflow: auto;
-                overflow-wrap: break-word;
+                // overflow: auto;
+                // overflow-wrap: break-word;
                 word-wrap: break-word;
                 white-space: normal;
                 resize: none;
@@ -440,7 +440,7 @@
   max-height: calc((100% - 6px) - 2em);
   user-select: text;
   visibility: visible;
-  overflow: auto;
+  //overflow: auto;
 
   .btnClose {
     margin: 5px;
