--- a/client/src/app/pages/navigator/screens/main/components/profile/profile.component.scss
+++ b/client/src/app/pages/navigator/screens/main/components/profile/profile.component.scss
@@ -46,7 +46,6 @@
 .bio {
   height: 40%;
   margin-bottom: 16px;
- 
 
   #background {
     height: 50%;
@@ -132,13 +131,13 @@
           color: #536471;
         }
       }
-      #bioprofile{
+      #bioprofile {
         word-wrap: break-word;
         max-width: 80%;
-         span{
+        span {
           font-size: 15px;
           color: #291520;
-         }
+        }
       }
     }
     #date {
@@ -349,7 +348,7 @@
     max-height: calc((100% - 6px) - 2em);
     user-select: text;
     visibility: visible;
-    overflow: auto;
+    // overflow: auto;
   }
 
   .top-dialog {
@@ -416,8 +415,9 @@
   max-height: calc((100% - 6px) - 2em);
   user-select: text;
   visibility: visible;
-  overflow: auto;
+  // overflow: auto;
   padding: 0;
+
   #top {
     height: 50px;
     padding-right: 16px;
@@ -429,28 +429,27 @@
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      .btnClose{
+      .btnClose {
         height: 70%;
         width: 40px;
         border-radius: 50%;
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        #box{
+        #box {
           height: 35px;
           width: 35px;
           border-radius: 50%;
           display: flex;
           justify-content: center;
           align-items: center;
-          img{
+          img {
             width: 10px;
             height: 10px;
           }
         }
-        
       }
-      #box:hover{
+      #box:hover {
         cursor: pointer;
         background-color: #e6e6e6;
       }
@@ -522,8 +521,6 @@
         background-color: #444444;
         opacity: 0.5;
         cursor: pointer;
-       
-       
       }
       #addImg:hover {
         cursor: pointer;
@@ -557,7 +554,7 @@
         align-items: center;
         // background-image: url('{{ selectedImage }}');
         // background-size: cover;
-       
+
         #addImg {
           width: 50px;
           height: 50px;
@@ -566,8 +563,8 @@
           justify-content: center;
           align-items: center;
           background-color: #444444;
-         opacity: 0.5;
-          img{
+          opacity: 0.5;
+          img {
             width: 100%;
             height: 100%;
             border-radius: 50%;
@@ -645,7 +642,7 @@
         justify-content: flex-start;
         align-items: center;
         margin-left: 12px;
-        textarea{
+        textarea {
           width: 100%;
           height: 100%;
           border: none;
@@ -654,7 +651,7 @@
           white-space: normal;
           font-family: sans-serif;
           resize: none;
-          overflow: auto;
+          // overflow: auto;
         }
         textarea::-webkit-scrollbar {
           display: none;
@@ -662,28 +659,28 @@
       }
     }
 
-    #container_location{
+    #container_location {
       height: 60px;
       padding: 12px 20px;
-      #location{
+      #location {
         height: 30%;
         display: flex;
         justify-content: flex-start;
         align-items: center;
         margin-left: 12px;
         margin-top: 5px;
-        span{
+        span {
           font-size: 13px;
           color: #536471;
         }
       }
-      #input_location{
+      #input_location {
         height: 60%;
         display: flex;
         justify-content: flex-start;
         align-items: center;
         margin-left: 12px;
-        input{
+        input {
           width: 100%;
           height: 100%;
           border: none;
@@ -693,28 +690,28 @@
       }
     }
 
-    #container_website{
+    #container_website {
       height: 60px;
       padding: 12px 20px;
-      #website{
+      #website {
         height: 30%;
         display: flex;
         justify-content: flex-start;
         align-items: center;
         margin-left: 12px;
         margin-top: 5px;
-        span{
+        span {
           font-size: 13px;
           color: #536471;
         }
       }
-      #input_website{
+      #input_website {
         height: 60%;
         display: flex;
         justify-content: flex-start;
         align-items: center;
         margin-left: 12px;
-        input{
+        input {
           width: 100%;
           height: 100%;
           border: none;
@@ -724,35 +721,32 @@
       }
     }
 
-    #container_birthday{
+    #container_birthday {
       height: 60px;
       padding: 12px 20px;
-      #birthday{
+      #birthday {
         height: 30%;
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        #title{
+        #title {
           font-size: 15px;
           color: #536471;
         }
-        #edit{
+        #edit {
           font-size: 15px;
-          color: #1D9BF0;
+          color: #1d9bf0;
         }
 
-        #edit:hover{
+        #edit:hover {
           cursor: pointer;
           text-decoration: underline;
         }
       }
-      #date{
+      #date {
         font-size: 20px;
-        color: #0F1419;
+        color: #0f1419;
       }
     }
-
-    
   }
-
 }
